<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrey_300">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:background="@color/blueGrey_200"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/grey_500">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_score_reached"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/score_reached"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_life_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/life_rest"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_lives_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/lives_remaining"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_time_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_medium"
                android:gravity="center"
                android:text="@string/time_left"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/kode_mono_semibold"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/blueGrey_800"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:gravity="bottom|center"
            android:hint="@string/hint"
            android:inputType="numberSigned" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/kode_mono_regular"
                android:text="@string/send_btn"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:fontFamily="@font/kode_mono_regular"
                android:text="@string/next_btn"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>