<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrey_300"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="@color/blueGrey_200"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_win"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/kode_mono_medium"
            android:gravity="center"
            android:text="@string/win_title"
            android:textColor="@color/blueGrey_800"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_score_win"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/kode_mono_medium"
            android:gravity="center"
            android:text="@string/user_score"
            android:textColor="@color/blueGrey_800"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/kode_mono_regular"
            android:text="@string/try_again"
            android:textSize="20sp"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/kode_mono_regular"
            android:text="@string/exit"
            android:textSize="20sp"
            app:cornerRadius="4dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>